# sip

./: .eslintrc.js  .gitignore  CNAME  Cargo.toml  README.md  index.html  index.js  package.json  tarpaulin-report.html  vue.config.js
.github/workflows/: rust build.yml  rust test.yml  rust.yml
rust/src/: lib.rs
rust/src/sir/: virus.rs  world.rs
src/: App.vue  main.rs  main.ts  world.rs
src/components/: World.vue
src/router/: index.ts
src/rust/: Cargo.toml
src/rust/src/: lib.rs  main.rs
src/rust/src/rendering/: canvas_render.rs
src/rust/src/sir/: mod.rs  person.rs  population.rs  virus.rs  world.rs
src/rust/tests/: world.rs
src/sir/: person.rs  virus.rs  world.rs
src/views/: Home.vue  Simulator.vue
src/wasm-renderer/: mod.rs
src/world/: person.rs  virus.rs  world.rs
web/: bootstrap.js  index.html  index.js  package.json  webpack.config.js
