[package]
name = "sir"
version = "0.1.0"
authors = ["Tom Cuypers <tcuypers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sir"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
# pixel-canvas = "0.2.1"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
argparse = "0.2.2"
js-sys = "0.3.40"

console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]

[profile.release]
lto = true
opt-level = 3